# paw-rs

./: Cargo.toml  LICENSE  README.en.md  README.md  deny.toml  release.toml
.github/workflows/: audit.yml  ci.yml  publish.yml
paw-candle/: Cargo.toml
paw-candle/examples/: compare_ref.rs  gpt2_benchmark.rs  gpt2_inference.rs  logit_compare.rs  qwen3_benchmark.rs  qwen3_debug.rs  qwen3_inference.rs  verify_bundle.rs  verify_pool.rs
paw-candle/src/: config.rs  interpreter.rs  kv_cache.rs  lib.rs  lora.rs  models.rs  pool.rs  runtime.rs  tokenizer.rs
paw-candle/src/models/: gpt2.rs  qwen3.rs
paw-core/: Cargo.toml
paw-core/examples/: clear_cache.rs  download_and_save.rs
paw-core/src/: bundle.rs  cache.rs  client.rs  config.rs  error.rs  format.rs  lib.rs  prelude.rs  runtime.rs  types.rs
paw-core/src/format/: meta.rs  reader.rs  tensor.rs  tests.rs  writer.rs
paw-llamacpp/: Cargo.toml
paw-llamacpp/examples/: compare_test.rs  llamacpp_benchmark.rs  llamacpp_nolora.rs  minimal_test.rs  parallel_benchmark.rs  verify_backend.rs
paw-llamacpp/src/: backend.rs  config.rs  lib.rs  pool.rs  prefix_cache.rs  runtime.rs  tokenizer.rs
paw-mistralrs/: Cargo.toml
paw-mistralrs/examples/: mistralrs_benchmark.rs
paw-mistralrs/src/: config.rs  converter.rs  kv_cache.rs  lib.rs  runtime.rs  tokenizer.rs
paw-rs/: Cargo.toml
paw-rs/examples/: high_level.rs  low_level.rs  typed_api.rs
paw-rs/src/: function.rs  lib.rs  prelude.rs
