[workspace]
members = ["paw-core", "paw-candle", "paw-rs"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/dynamder/paw-rs"
homepage = "https://github.com/dynamder/paw-rs"
documentation = "https://github.com/dynamder/paw-rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
