[package]
name = "paw-candle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Candle-based inference runtime for ProgramAsWeights"

[features]
default = []
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
]
metal = []

[dependencies]
paw-core = { path = "../paw-core" }
candle-core = { version = "0.11", default-features = false }
candle-nn = { version = "0.11", default-features = false }
candle-transformers = "0.11"
hf-hub = "1.0"
tokenizers = "0.23"
safetensors = "0.8"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

