[package]
name = "paw-candle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Candle-based inference runtime for ProgramAsWeights"
readme = "../README.en.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[features]
default = []
tracing = ["dep:tracing"]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
]
metal = []
mkl = ["candle-core/mkl"]
accelerate = ["candle-core/accelerate"]

[dependencies]
paw-core = { version = "0.3", path = "../paw-core" }
candle-core = { version = "0.11", default-features = false }
candle-nn = { version = "0.11", default-features = false }
candle-transformers = "0.11"
hf-hub = "1.0"
tokenizers = "0.23"
safetensors = "0.8"
thiserror = "2"
ahash = "0.8"
rayon = "1"
memmap2 = "0.9"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

