[package]
name = "paw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, API client, and cache management for ProgramAsWeights"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
zip = "2"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
safetensors = "0.8"

[dev-dependencies]
tracing-subscriber = "0.1"
candle-core = "0.11"
