[package]
name = "paw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, API client, and cache management for ProgramAsWeights"
readme = "../README.en.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
zip = "2"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
safetensors = "0.8"

[dev-dependencies]
candle-core = "0.11"
