[package]
name = "paw-llamacpp"
publish = true
version.workspace = true
edition.workspace = true
license.workspace = true
description = "llama.cpp inference runtime for ProgramAsWeights (experimental)"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[features]
default = []
tracing = []
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]

[dependencies]
paw-core = { version = "0.2", path = "../paw-core" }
llama-cpp-2 = "0.1"
encoding_rs = "0.8"
[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
