[package]
name = "paw-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ProgramAsWeights Rust SDK — easy-to-use API for PAW inference"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
paw-core = { version = "0.1", path = "../paw-core" }
paw-candle = { version = "0.1", path = "../paw-candle" }
hf-hub = "1.0"
thiserror = "2"

clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bin]]
name = "paw-rs"
path = "src/bin/paw-rs.rs"

[features]
default = []
cuda = ["paw-candle/cuda"]
metal = ["paw-candle/metal"]
