[package]
name = "paw-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ProgramAsWeights Rust SDK — easy-to-use API for PAW inference"
readme = "../README.en.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
paw-core = { version = "0.3", path = "../paw-core" }
paw-candle = { version = "0.3", path = "../paw-candle", optional = true }
paw-llamacpp = { version = "0.3", path = "../paw-llamacpp", optional = true }
hf-hub = "1.0"
thiserror = "2"

clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
webbrowser = "1"
rpassword = "7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "paw-rs"
path = "src/bin/paw-rs.rs"

[[example]]
name = "typed_api"
required-features = ["candle"]

[features]
default = ["llamacpp"]
candle = ["paw-candle"]
llamacpp = ["paw-llamacpp"]
cuda   = ["paw-candle?/cuda",   "paw-llamacpp?/cuda"]
metal  = ["paw-candle?/metal",  "paw-llamacpp?/metal"]
mkl    = ["paw-candle?/mkl"]
accelerate = ["paw-candle?/accelerate"]
tracing = [
    "paw-candle?/tracing",
    "paw-llamacpp?/tracing",
]
